# HuggingFace-AI-Agent-GAIA-Benchmark

./: .gitignore  README.md  agent.py  pyproject.toml  system_prompt.txt  trial.py
vscode projects/chatBot/: .gitignore  README.md  agent.py  pyproject.toml  questions.py  system_prompt.txt
