[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.4",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.3",
]
